--- a/views/product/productPage.ejs
+++ b/views/product/productPage.ejs
@@ -10,18 +10,26 @@
     
 
     <main class="pd-main">
+        
+        <h2 class="pd-titulo">Tienda</h2>
+        <h2 class="add-receta-container">David</h2>
         <% if (datos.userLogged && datos.userLogged.userRole == "Admin"){ %> 
             <div class="pa-add-btn">
-                <div class="pa-div-add-btn">
-                    <button class="pd-admin ">
+                <!-- <div class="pa-div-add-btn">-->
+                     <button class="pd-admin ">
                         <a href="/product/productAdmin/0" class="pd-admin-a">Agregar</a>
                     </button>
-                </div>
+                <!-- </div>-->
             </div>        
         <%}%>
-        <h2 class="pd-titulo">Tienda</h2>
+
         <div class="pd-tienda">
+          
+
             <%- include("../partials/articles") %>
+
+           
+
         </div>
         
     </main>
