para subir cambios del boton agregar del pruductPage

--- a/views/product/productPage.ejs
+++ b/views/product/productPage.ejs
@@ -12,9 +12,8 @@
     <main class="pd-main">
         
         <h2 class="pd-titulo">Tienda</h2>
-        <h2 class="add-receta-container">David</h2>
-        <% if (datos.userLogged && datos.userLogged.userRole == "Admin"){ %> 
-            <div class="pa-add-btn">
+               <% if (datos.userLogged && datos.userLogged.userRole == "Admin"){ %> 
+            <div class="add-receta-container">
                 <!-- <div class="pa-div-add-btn">-->
                      <button class="pd-admin ">
                         <a href="/product/productAdmin/0" class="pd-admin-a">Agregar</a>
