--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1290,10 +1290,99 @@ section .pd-quienes-somos-right, section .pd-quienes-somos-left {
 }
 .nr-process-container {
   border: solid 1px #c4c4c4;
+  margin-top: 10px; 
  }
 
 .nr-process-container p {
   margin: 10px;
+}
+
+.ra-admin-container {
+  padding: 20px 40px;
+}
+.ra-admin-container h3 {
+  margin: 10px 0;
+}
+
+.ra-name {
+  display: flex;
+  align-items: center;
+  background-color: #ffda4d;
+  border-top-right-radius: 10px;
+}
+.ra-information {
+  padding-left: 10px;
+
+}
+div .ra-receta-container {
+  border-right: 2px solid #ffda4d;
+  border-left: 2px solid #ffda4d;
+  border-bottom: 2px solid #ffda4d;
+  padding: 10px 15px;
+}
+.ra-information h4 {
+  margin: 10px 0;
+
+}
+.ra-information ul li h6 {
+  width: 250px;
+  font-size: 14px;
+}
+
+.ra-information-attributes  h6{
+  padding: 10px 0;
+}
+.ra-li-malt, .ra-li-hop {
+  list-style-type: none;
+  padding:0 3px;  
+  background-color: white;
+  border: 1px solid #c4c4c4;
+  margin: 5px 5px 15px 5px;
+  padding: 10px 5px;
+  border-radius: 5px;
+
+}
+.ra-li-hop p {
+  width: 170px;
+}
+.ra-information-attributes li div {
+  display: flex;
+ 
+  padding: 3px 20px;
+ 
+}
+.ra-information-attributes li p {
+  width: 100px;
+  justify-content: left;
+  margin-left: 10px;
+  font-size: 13px;
+}
+.ra-information-attributes li input, .ra-information .pd-beer-attributes li p input, .ra-name p input {
+  border-radius: 3px;
+  margin-right: 20px;
+  border: 1px solid #c4c4c4;
+  padding:2px;
+}
+.ra-tip-container {
+  display: flex;
+  background-color: #c4c4c4;
+  justify-content: space-around;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 5px;
+}
+.ra-tip {
+  flex-wrap: wrap;
+}
+.ra-tip h4 {
+  padding: 10px 0;
+}
+.ra-tip input {
+  height: 350px;
+  width: 350px;
+  border-radius: 3px;
+  border: 1px solid #c4c4c4;
+  padding:2px;
 }
 
 
@@ -2092,25 +2181,41 @@ section.ind-bottom{
   padding: 10px 20px 10px 10px;
 }
 .nr-information h4 {
-  padding: 10px 5px;
+  padding: 10px 0;
 }
-.pd-beer-attributes h4 {
-  font-size: 18px;
-  margin: 10px 0;
+.nr-beer-attributes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+    
+  }
+  
+  section div .nr-beer-attributes li {
+    justify-content: left;
+    list-style-type: none;
+    align-items: baseline;
+  }
+  .nr-beer-attributes h4 {
+    font-size: 18px;
+    margin: 10px 0;
+  }
+  .nr-beer-attributes h6 {
+    font-size: 16px;
+  }
+  .nr-beer-attributes p {
+    font-size: 14px;
+  }
+
 }
-.pd-beer-attributes h6 {
-  font-size: 16px;
-}
-.pd-beer-attributes p {
-  font-size: 14px;
-}
+
+
 
 
 
 
 /* Fin Media 1200 NUESTRAS RECETAS*/
 
-}
+
 
 
 /*#########################################################################################/*/
