css en progreso

--- a/views/recetas/nuestrasRecetas.ejs
+++ b/views/recetas/nuestrasRecetas.ejs
@@ -52,7 +52,7 @@
                             <div class="nr-information-block">                               
                                 <div class="nr-information">
                                     <h4>Básicos</h4>
-                                    <ul class="pd-beer-attributes">
+                                    <ul class="nr-beer-attributes">
                                         <li>
                                             <h5>Volumen: </h5>
                                             <p>
