--- a/views/recetas/nuestrasRecetasAdmin.ejs
+++ b/views/recetas/nuestrasRecetasAdmin.ejs
@@ -26,7 +26,7 @@
                         <div class="ra-information-block">
                             <div class="ra-information">
                                 <h4>Completá los datos básicos</h4>
-                                <ul class="pd-beer-attributes">
+                                <ul class="ra-beer-attributes">
                                     <li>
                                         <h6>Volumen: </h6>
                                         <p><input type="text" name="volume"> lts.</p> 
