--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1266,6 +1266,15 @@ section .pd-quienes-somos-right, section .pd-quienes-somos-left {
 .pd-admin i {
   padding: 0 3px;
 }
+.nr-beer-attributes li {
+  justify-content: left;
+  list-style-type: none;
+  align-items: baseline;
+}
+
+.nr-beer-attributes li h5 {
+  width: 100px;
+}
 .nr-information-container {
   display: flex;
   flex-direction: column;
@@ -1314,6 +1323,7 @@ section .pd-quienes-somos-right, section .pd-quienes-somos-left {
   padding-left: 10px;
 
 }
+
 div .ra-receta-container {
   border-right: 2px solid #ffda4d;
   border-left: 2px solid #ffda4d;
@@ -1327,6 +1337,22 @@ div .ra-receta-container {
 .ra-information ul li h6 {
   width: 250px;
   font-size: 14px;
+}
+
+.ra-beer-attributes {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: left;
+  font-family: "Montagu Slab", serif;
+}
+
+.ra-beer-attributes li {
+  justify-content: left;
+  list-style-type: none;
+  align-items: baseline;
+  display: flex;
+  padding: 3px;  
 }
 
 .ra-information-attributes  h6{
@@ -1357,7 +1383,7 @@ div .ra-receta-container {
   margin-left: 10px;
   font-size: 13px;
 }
-.ra-information-attributes li input, .ra-information .pd-beer-attributes li p input, .ra-name p input {
+.ra-information-attributes li input, .ra-information .ra-beer-attributes li p input, .ra-name p input {
   border-radius: 3px;
   margin-right: 20px;
   border: 1px solid #c4c4c4;
@@ -2190,11 +2216,7 @@ section.ind-bottom{
     
   }
   
-  section div .nr-beer-attributes li {
-    justify-content: left;
-    list-style-type: none;
-    align-items: baseline;
-  }
+
   .nr-beer-attributes h4 {
     font-size: 18px;
     margin: 10px 0;
