--- a/views/product/productAdmin.ejs
+++ b/views/product/productAdmin.ejs
@@ -11,70 +11,89 @@
     <section class="pd-product-area">
         
         <div class="pd-product-info">
-            <h3>Administracion de Producto</h3>
-            <% if (cervezaToEdit.id == 0){%>
-                <form action="/product/productAdmin/" method="POST" enctype="multipart/form-data">
-            <%}else{%>
-                <form action="/product/productAdmin/<%= cervezaToEdit.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
-            <%}%>
-            <div class="pd-product-imgs">
-                <img src="/images/<%= cervezaToEdit.image %>" alt="beer">
-            </div>
-                <ul class="pd-beer-attributes">
-                    <li>
-                        <h5>Nombre</h5>
-                        <p><input type="text" name="name" value="<%=cervezaToEdit.name%>"></p>
-                    </li>
-                    <li>
-                        <h5>Descripción</h5>
-                        <p><input type="text" name="description" value="<%=cervezaToEdit.description%>"></p>
-                    </li>
-                    <li>
-                        <h5>Amargor: </h5>
-                        <p><input type="text" name="bitterness" value="<%=cervezaToEdit.bitterness%>"></p>
-                    </li>                  
-                    <li>
-                        <h5>Alcohol: </h5>
-                        <p><input type="text" name="alcohol" value="<%=cervezaToEdit.alcohol%>"></p>
-                    </li>
-                    <li>
-                        <h5>Color: </h5>
-                        <p><input type="text" name="color" value="<%=cervezaToEdit.color%>"></p>
-                    </li>
-                    <li>
-                        <h5>Lúpulo/s: </h5>
-                        <p><input type="text" name="hop" value="<%=cervezaToEdit.hop%>"></p>
-                    </li>
-                    <li>
-                        <h5>Gasificación: </h5>
-                        <p><input type="text" name="carbonation" value="<%=cervezaToEdit.carbonation%>" ></p>
-                    </li>
-                    <li>
-                        <h5>Precio: </h5>
-                        <p><input type="text" name="price" value="<%=cervezaToEdit.price%>" ></p>
-                    </li>
-                    <li>
-                        <h5>Categoría: </h5> 
-                    <select name="category">
-                            <% let categories=['Estandar', 'Especial' , 'Merchandising']; %>
-                            <% for (const oneCategory of categories) { %>
-                                <option 
-									value="<%= oneCategory %>"
-									<%= locals.oldData && (oneCategory === oldData.oneCategory) ? 'selected' : null %>> <%= oneCategory %> </option>
-                                </option>
-                                <% } %>
-                    </select>
-                    </li>
+            
+                <div class="pc-ResumenCompra">
+                    <h3>Administracion de Producto</h3>
+                    <% if (cervezaToEdit.id == 0){%>
+                        <form action="/product/productAdmin/" method="POST" enctype="multipart/form-data">
+                    <%}else{%>
+                        <form action="/product/productAdmin/<%= cervezaToEdit.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
+                    <%}%>
+                    <div class="pd-product-imgs">
+                        <img src="/images/<%= cervezaToEdit.image %>" alt="beer">
+                    </div>
+                    <div class="pc-ResumenCompra-Subtotal">
+                        <div class="pc-ResumenCompra-Subtotal-valores">
+                            <div >
+                                <label class="pc-ResumenCompra-detalle-texto" class="rg-input" >Nombre:</label> 
+                            </div>
+                            <div>
+                                <label class="pc-ResumenCompra-detalle-texto" class="rg-input">Descripción:</label> 
+                            </div>
+                            <div>
+                                <label class="pc-ResumenCompra-detalle-texto" class="rg-input">Amargor:</label> 
+                            </div>
+                            <div>
+                                <label class="pc-ResumenCompra-detalle-texto" class="rg-input">Alcohol:</label> 
+                            </div>
+                            <div>
+                                <label class="pc-ResumenCompra-detalle-texto" class="rg-input">Color:</label> 
+                            </div>
+                            <div>
+                                <label class="pc-ResumenCompra-detalle-texto" class="rg-input">Lúpulo/s:</label> 
+                            </div>
+                            <div>
+                                <label class="pc-ResumenCompra-detalle-texto" class="rg-input">Gasificación:</label> 
+                            </div>
+                            <div>
+                                <label class="pc-ResumenCompra-detalle-texto" >Precio:</label> 
+                            </div>
+                            <div>
+                                <label class="pc-ResumenCompra-detalle-texto" >Categoría:</label> 
+                            </div>
+                        </div>
+                    
+                        <div class="pc-ResumenCompra-Subtotal-valores">
+                            <p><input type="text" name="name" value="<%=cervezaToEdit.name%>"></p>
+                    
+                            <p><input type="text" name="description" value="<%=cervezaToEdit.description%>"></p>
+                    
+                            <p><input type="text" name="bitterness" class="pa-Alinear_texto_Derecha" value="<%=cervezaToEdit.bitterness%>"></p>
+                    
+                            <p><input type="text" name="alcohol"  class="pa-Alinear_texto_Derecha"value="<%=cervezaToEdit.alcohol%>"></p>
+                    
+                            <p><input type="text" name="color"  class="pa-Alinear_texto_Derecha"value="<%=cervezaToEdit.color%>"></p>
+                    
+                            <p><input type="text" name="hop" value="<%=cervezaToEdit.hop%>"></p>
+                    
+                            <p><input type="text" name="carbonation" value="<%=cervezaToEdit.carbonation%>" ></p>
+                        
+                            <p><input type="text" name="price"  class="pa-Alinear_texto_Derecha" value="<%=cervezaToEdit.price%>" ></p>
 
-                </ul>
+                            <select name="category">
+                                <!---->
+                                <% let categories=['Estandar', 'Especial' , 'Merchandising']; %>
+                                <% for (const oneCategory of categories) { %>
+                                    <option 
+                                        value="<%= oneCategory %>"
+                                        <%= locals.oldData && (oneCategory === oldData.oneCategory) ? 'selected' : null %>> <%= oneCategory %> </option>
+                                    </option>
+                                    <% } %>
+                            </select>
 
-                <input type="file" name="product-image">
-                <input type="text" name="image" style="opacity: 0;" value="<%=cervezaToEdit.image%>">
-                
-                <div class="pd-options">
-                    <input type="submit" class="lg-submit" value="Guardar">
-                    <input type="reset" class="lg-submit" name="limpiar" value="Limpiar">
+                        </div>
+                    </div>
+
+                    <input type="file" name="product-image">
+                    <input type="text" name="image" style="opacity: 0;" value="<%=cervezaToEdit.image%>">
+                    
+                    <div class="pd-options">
+                        <input type="submit" class="lg-submit" value="Guardar">
+                        <input type="reset" class="lg-submit" name="limpiar" value="Limpiar">
+                    </div>
+
                 </div>
+                
             </form>
             <form action="/product/<%= cervezaToEdit.id %>?_method=DELETE" method="POST">
                 <input type="submit" class="lg-submit" value="Eliminar">
