--- a/views/recetas/nuestrasRecetasAdmin.ejs
+++ b/views/recetas/nuestrasRecetasAdmin.ejs
@@ -151,12 +151,12 @@
                         <div class="ra-tip-container">
                             <div class="ra-tip">
                                 <h4>Tip cervecero</h4>
-                                <p>Redactá una recmendación:<input type="text" name="brewerTip"> </p>
+                                <p>Redactá una recmendación  <input type="text" name="brewerTip"></p>                               
                             </div>
                             <div class="ra-tip">
                                 <h4>Maridaje</h4>
-                                <p>¿Combina bien con qué comida/s?<input type="text" name="foodPairing"> </p>
-                        
+                                <p>¿Combina bien con qué comida/s?
+                                    <input type="text" name="foodPairing"></p>       
                             </div>
                         </div>
                     </div>
