--- a/views/recetas/nuestrasRecetasAdmin.ejs
+++ b/views/recetas/nuestrasRecetasAdmin.ejs
@@ -17,7 +17,7 @@
                 
                 <div class="ra-name">
                     <h5 class="receta-name">Nombre</h5> 
-                        <p><input type="text" name="name"></p>        
+                        <p><input type="text" name="name" value="<%=recetaToEdit.name%>"></p>        
                 </div>
 
                 <div class="ra-receta-container">
@@ -29,36 +29,36 @@
                                 <ul class="ra-beer-attributes">
                                     <li>
                                         <h6>Volumen: </h6>
-                                        <p><input type="text" name="volume"> lts.</p> 
+                                        <p><input type="text" name="volume" value="<%=recetaToEdit.volume%>"> lts.</p> 
                                     </li>
                                     <li>
                                         <h6>Volumen de hervor: </h6>
-                                        <p><input type="text" name="boilvolume"> lts.</p>
+                                        <p><input type="text" name="boilvolume" value="<%=recetaToEdit.boilvolume%>"> lts.</p>
                                     </li>
                                     <li>
                                         <h6>Duración del hervor: </h6>
-                                        <p><input type="text" name="boilTime"> min.</p>
+                                        <p><input type="text" name="boilTime" value="<%=recetaToEdit.boilTime%>" > min.</p>
                                         
                                     </li>
                                     <li>
                                         <h6>Alcohol: </h6>
-                                        <p><input type="text" name="alcohol"> min.</p>
+                                        <p><input type="text" name="alcohol" value="<%=recetaToEdit.alcohol%>"> min.</p>
                                     </li>
                                     <li>
                                         <h6>Densidad final: </h6>
-                                        <p><input type="text" name="targetFG"> min.</p>
+                                        <p><input type="text" name="targetFG" value="<%=recetaToEdit.targetFG%>"> min.</p>
                                     </li>
                                     <li>
                                         <h6>Densidad inicial: </h6>
-                                        <p><input type="text" name="targetOG"> min.</p>
+                                        <p><input type="text" name="targetOG" value="<%=recetaToEdit.targetOG%>"> min.</p>
                                     </li>
                                     <li>
                                         <h6>PH inicial: </h6>
-                                        <p><input type="text" name="initialPH"> min.</p>
+                                        <p><input type="text" name="initialPH" value="<%=recetaToEdit.initialPH%>"> min.</p>
                                     </li>
                                     <li>
                                         <h6>PH final: </h6>
-                                        <p><input type="text" name="finalPH"> min.</p>
+                                        <p><input type="text" name="finalPH" value="<%=recetaToEdit.finalPH%>"> min.</p>
                                     </li>
                                 </ul>
                             </div><br>
@@ -70,16 +70,16 @@
                                         <h6>Macerado </h6>
                                           
                                         <h6>Temperatura de maceración: </h6>
-                                        <p></p><input type="text" name="mashTemp"> ° (grados celsius)
+                                        <p></p><input type="text" name="mashTemp" value="<%=recetaToEdit.mashTemp%>"> ° (grados celsius)
                                             
                                         <h6>Tiempo de maceración: </h6>
-                                        <p></p><input type="text" name="mashTime"> minutos
+                                        <p></p><input type="text" name="mashTime" value="<%=recetaToEdit.mashTime%>"> minutos
                                  
                                     </li>
                                     <li class="ra-li-malt">
                                         <h6>Fermentación </h6>
                                         <h6>Temperatura de fermentación: </h6>
-                                        <p></p><input type="text" name="fermentationTemp"> minutos
+                                        <p></p><input type="text" name="fermentationTemp" value="<%=recetaToEdit.fermentationTemp%>"> minutos
                                     </li>
                                 </ul>
                             </div>
@@ -92,28 +92,28 @@
                                         <h6>Maltas</h6>
                                         <h6>Malta principal: </h6>
                                         <div>
-                                        <p>Tipo de malta:</p><input type="text" name="malt1"> 
-                                        <p>Cantidad:</p><input type="text" name="malt1Amount">
+                                        <p>Tipo de malta:</p><input type="text" name="malt1" value="<%=recetaToEdit.malt1%>"> 
+                                        <p>Cantidad:</p><input type="text" name="malt1Amount" value="<%=recetaToEdit.malt1Amount%>">
                                     </div>
                                     <h6>Malta adicional: </h6>
                                     <div>
-                                        <p>Tipo de malta:</p><input type="text" name="malt2"> 
-                                        <p>Cantidad:</p><input type="text" name="malt2Amount">
+                                        <p>Tipo de malta:</p><input type="text" name="malt2" value="<%=recetaToEdit.malt2%>"> 
+                                        <p>Cantidad:</p><input type="text" name="malt2Amount" value="<%=recetaToEdit.malt2Amount%>">
                                     </div>
                                     <h6>Malta adicional: </h6>
                                     <div>   
-                                        <p>Tipo de malta:</p><input type="text" name="malt3"> 
-                                        <p>Cantidad:</p><input type="text" name="malt3Amount">
+                                        <p>Tipo de malta:</p><input type="text" name="malt3" value="<%=recetaToEdit.malt3%>"> 
+                                        <p>Cantidad:</p><input type="text" name="malt3Amount" value="<%=recetaToEdit.malt3Amount%>">
                                     </div>
                                         <h6>Malta adicional: </h6>
                                         <div>
-                                             <p>Tipo de malta:</p><input type="text" name="malt4"> 
-                                        <p>Cantidad:</p><input type="text" name="malt4Amount">
+                                             <p>Tipo de malta:</p><input type="text" name="malt4" value="<%=recetaToEdit.malt4%>"> 
+                                        <p>Cantidad:</p><input type="text" name="malt4Amount" value="<%=recetaToEdit.malt4Amount%>">
                                     </div>
                                         <h6>Malta adicional: </h6>
                                        <div>
-                                            <p>Tipo de malta:</p><input type="text" name="malt5"> 
-                                        <p>Cantidad:</p><input type="text" name="malt5Amount"> 
+                                            <p>Tipo de malta:</p><input type="text" name="malt5" value="<%=recetaToEdit.malt5%>"> 
+                                        <p>Cantidad:</p><input type="text" name="malt5Amount" value="<%=recetaToEdit.malt5Amount%>"> 
                                     </div>
                                     </li>
                                     <li class="ra-li-hop">
@@ -121,28 +121,28 @@
                                        
                                         <h6>Lúpulo principal: </h6>
                                         <div>
-                                        <p>Tipo de lúpulo:</p><input type="text" name="hop1"> 
-                                        <p>Cantidad: </p> <input type="text" name="hop1Amount">                                      
-                                        <p>Momento de adición:</p><input type="text" name="hop1Moment"> 
+                                        <p>Tipo de lúpulo:</p><input type="text" name="hop1" value="<%=recetaToEdit.hop1%>"> 
+                                        <p>Cantidad: </p> <input type="text" name="hop1Amount" value="<%=recetaToEdit.hop1Amount%>">                                      
+                                        <p>Momento de adición:</p><input type="text" name="hop1Moment" value="<%=recetaToEdit.hop1Moment%>"> 
                                         </div>
                                         <h6>Lúpulo adicional: </h6>
                                         <div>
-                                        <p>Tipo de lúpulo:</p><input type="text" name="hop2"> 
-                                        <p>Cantidad:</p><input type="text" name="hop2Amount"> 
-                                        <p>Momento de adición:</p><input type="text" name="hop2Moment"> 
+                                        <p>Tipo de lúpulo:</p><input type="text" name="hop2" value="<%=recetaToEdit.hop2%>"> 
+                                        <p>Cantidad:</p><input type="text" name="hop2Amount" value="<%=recetaToEdit.hop2Amount%>"> 
+                                        <p>Momento de adición:</p><input type="text" name="hop2Moment" value="<%=recetaToEdit.hop2Moment%>"> 
                                     </div>
                                         <h6>Lúpulo adicional: </h6>
                                         <div>
-                                        <p>Tipo de lúpulo:</p><input type="text" name="hop3"> 
-                                        <p>Cantidad:</p><input type="text" name="hop3Amount"> 
-                                        <p>Momento de adición:</p><input type="text" name="hop3Moment"> 
+                                        <p>Tipo de lúpulo:</p><input type="text" name="hop3" value="<%=recetaToEdit.hop3%>"> 
+                                        <p>Cantidad:</p><input type="text" name="hop3Amount" value="<%=recetaToEdit.hop3Amount%>"> 
+                                        <p>Momento de adición:</p><input type="text" name="hop3Moment" value="<%=recetaToEdit.hop3Moment%>"> 
                                     </div>
                                     </li>
                                     <li class="ra-li-malt">
                                         <h6>Levadura: </h6> 
                                         <div>
-                                        <p>Tipo de levadura:</p><input type="text" name="yeast"> 
-                                        <p>Cantidad:</p><input type="text" name="yeastAmount"> 
+                                        <p>Tipo de levadura:</p><input type="text" name="yeast" value="<%=recetaToEdit.yeast%>"> 
+                                        <p>Cantidad:</p><input type="text" name="yeastAmount" value="<%=recetaToEdit.yeastAmount%>"> 
                                     </div>
                                     </li>
                                 </ul>
@@ -151,12 +151,12 @@
                         <div class="ra-tip-container">
                             <div class="ra-tip">
                                 <h4>Tip cervecero</h4>
-                                <p>Redactá una recmendación  <input type="text" name="brewerTip"></p>                               
+                                <p>Redactá una recmendación  <input type="text" name="brewerTip" value="<%=recetaToEdit.brewerTip%>"></p>                               
                             </div>
                             <div class="ra-tip">
                                 <h4>Maridaje</h4>
                                 <p>¿Combina bien con qué comida/s?
-                                    <input type="text" name="foodPairing"></p>       
+                                    <input type="text" name="foodPairing" value="<%=recetaToEdit.foodPairing%>"></p>       
                             </div>
                         </div>
                     </div>
