--- a/views/recetas/nuestrasRecetas.ejs
+++ b/views/recetas/nuestrasRecetas.ejs
@@ -176,7 +176,7 @@
                                         <li>
                                             <h6>Levadura: </h6> </br>
                                             <p>
-                                                <%= datos.recetas[i].yeast %> - <%= datos.recetas[i].yeastAmount %> gr.
+                                                <%= datos.recetas[i].yeast %> - <%= datos.recetas[i].yeastAmount %> gr. por litro
                                             </p>
                                         </li>
                                     </ul>   
