feat: CRUD nuestras recetas terminado

--- a/views/recetas/nuestrasRecetasAdmin.ejs
+++ b/views/recetas/nuestrasRecetasAdmin.ejs
@@ -171,7 +171,7 @@
             </form>
 
             
-            <form action="/product/<%= recetaToEdit.id %>?_method=DELETE" method="POST">
+            <form action="/recetas/nuestrasRecetasAdmin/<%= recetaToEdit.id %>?_method=DELETE" method="POST">
                 <div class="ra-buton-container">
                     <button class="pd-admin ra-edit"></a>Eliminar receta</a></button>
                 </div>
