--- a/views/recetas/nuestrasRecetas.ejs
+++ b/views/recetas/nuestrasRecetas.ejs
@@ -107,8 +107,8 @@
 
                                 <div class="nr-information">
                                     <h4>Método y tiempos</h4>
-                                    <ul class="pd-beer-attributes">
-                                        <li>
+                                    <ul class="nr-beer-attributes">
+                                        <li class="nr-ingredients-list">
                                             <h5>Macerado: </h5>
                                             <p>
                                                 <%= datos.recetas[i].mashTemp %>° - <%=
@@ -173,8 +173,8 @@
                                                         <%= datos.recetas[i].hop3Moment %>
                                             </p></br>
                                         </li>
-                                        <li>
-                                            <h6>Levadura: </h6> </br>
+                                        <li class="nr-ingredients-list">
+                                            <h6>Levadura: </h6> 
                                             <p>
                                                 <%= datos.recetas[i].yeast %> - <%= datos.recetas[i].yeastAmount %> gr. por litro
                                             </p>
