--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -577,24 +577,24 @@ section .pd-product-info {
 .pa-li-element {
   list-style-type: none;
 }
-/* section div .pd-beer-attributes {
+section div .pd-beer-attributes {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: left;
   font-family: "Montagu Slab", serif;
-} */
-/* 
+} 
+
 section div .pd-beer-attributes li {
   justify-content: left;
   list-style-type: none;
   align-items: baseline;
   display: flex;
   padding: 3px;  
-} */
-/* section div .pd-beer-attributes li p, section .pd-sub-total-amount {
+} 
+ section div .pd-beer-attributes li p, section .pd-sub-total-amount {
   margin-left: 8px; 
-} */
+} 
 
 section .pd-sub-total {
   display: flex;
@@ -679,8 +679,12 @@ section div .pd-product-form .pd-quantity h5 {
 
 .pd-product-area .pd-product-info p, .pd-product-area .pd-product-info .pd-options {
   max-width: 500px;
-  margin: 3px auto;
+  margin: 3px ;
   justify-content: center;
+}
+
+.pd-beer-attributes li h5 {
+  width: 100px;
 }
 
 article .pd-seleccionar, .pd-add, .pd-product-area .pd-options button, .pd-options button {
