fix css botones nuestras recetas y textos quienes somos

--- a/views/quienesSomos.ejs
+++ b/views/quienesSomos.ejs
@@ -14,9 +14,7 @@
             <img src="/images/img-beer-temporary.jpg" alt="beer">
             <div>
                 <h6>Nosotros</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt alias tempora quod eius veritatis,
-                    ullam deleniti, officia, quisquam repudiandae perspiciatis explicabo harum. Impedit esse, mollitia
-                    consequuntur pariatur dolores consectetur beatae!</p>
+                <p>Somos un grupo de amigos del conurbano sur bonaerense. Nos proponemos elaborar profesionalmente una variedad de cervezas artesanales amigables al paladar local combinada con sabores nuevos y propios, brindado un servicio de entrega para hacer llegar el producto final a los consumidores de manera cómoda y eficiente.</p>
             </div>
         </div>
 
@@ -24,9 +22,10 @@
             <img src="/images/img-beer-temporary.jpg" alt="beer">
             <div>
                 <h6>La cervecería</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt alias tempora quod eius veritatis,
-                    ullam deleniti, officia, quisquam repudiandae perspiciatis explicabo harum. Impedit esse, mollitia
-                    consequuntur pariatur dolores consectetur beatae!</p>
+                <p>CHEC es una cervecería artesanal gestada por un grupo de amigos en Gerli, Provincia de Buenos Aires.
+                    Nació como un juego entre hermanos, pero rápidamente se convirtió en un lindo emprendimiento comercial.
+                    Cervezas Hechas En Casa, con Calidad.</p>
+                    <p>¡Una rica selecección de variedades para compartir con vos!</p>
             </div>
 
         </div>
