--- a/views/recetas/nuestrasRecetas.ejs
+++ b/views/recetas/nuestrasRecetas.ejs
@@ -36,7 +36,7 @@
                         <%= datos.recetas[i].name %>
                     </h5>
                     <div class="nr-buton-container">
-                    <button id="display-hide-btn<%= datos.recetas[i].id %>" onclick="display('<%= datos.recetas[i].id %>');" class="pd-admin nr-display-btn">Desplegar  <i class="fas fa-chevron-down"></i></button>
+                    <button id="display-hide-btn<%= datos.recetas[i].id %>" onclick="display('<%= datos.recetas[i].id %>');" class="nr-display-btn">Desplegar  <i class="fas fa-chevron-down"></i></button>
                     <% if (datos.userLogged && datos.userLogged.userRole=="Admin" ){ %>
                         <button class="pd-admin nr-edit"><a href="/recetas/nuestrasRecetasAdmin/<%= datos.recetas[i].id %>" class="pd-admin-a">Modificar receta</a></button>
                     <%}%>
@@ -46,7 +46,7 @@
                             <div id="receta-container<%= datos.recetas[i].id %>" class="receta-container">
                         
                             <div class="nr-buton-container">                               
-                                <button id="display-hide-btn<%= datos.recetas[i].id %>"  onclick="hide('<%= datos.recetas[i].id %>')" class="pd-admin">Ocultar  <i class="fas fa-chevron-up"></i></button>
+                                <button id="display-hide-btn<%= datos.recetas[i].id %>"  onclick="hide('<%= datos.recetas[i].id %>')" class="nr-display-btn">Ocultar  <i class="fas fa-chevron-up"></i></button>
                             </div>
                             <div class="nr-information-container">
                             <div class="nr-information-block">                               
