--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1252,7 +1252,33 @@ section .pd-quienes-somos-right, section .pd-quienes-somos-left {
 }
 .nr-display-btn {
   align-self: end;
+  padding: 5px;
+  margin: 5px;
+  font-family: "Montagu Slab", serif;
+  background-color: #000000;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  align-items: right;
+  cursor: pointer;
+  display: inline-block;  /*convierte las lineas de la lista en bloque para poder darles un padding*/
+  transition-property: color, box-shadow;
+  transition-duration: 200ms;  
 }
+
+.nr-display-btn a {
+  color: white;
+  text-decoration: none;
+  display: inline-block;
+  transition-duration: 200ms;
+  font-size: 13px;
+  font-weight: normal;
+}
+
+.nr-display-btn:hover {
+  color: #ff6200;
+}
+
 .nr-buton-container {
   display: flex;
   justify-content: right;
