slider y estilos quienes somos

--- a/views/quienesSomos.ejs
+++ b/views/quienesSomos.ejs
@@ -11,7 +11,14 @@
     <section class="pd-quienes-somos-area">
 
         <div class="pd-quienes-somos-right">
-            <img src="/images/img-beer-temporary.jpg" alt="beer">
+            <div class="slider qs-img-container">
+                <ul>
+                    <li><img src="/images/DSC_0005.jpg" alt="image slider" class="slider-img"></li>
+                    <li><img src="/images/DSC_0007.jpg" alt="image slider" class="slider-img"></li>
+                    <li><img src="/images/DSC_0014.jpg" alt="image slider" class="slider-img"></li>
+                    <li><img src="/images/DSC_0030.jpg" alt="image slider" class="slider-img"></li>
+                </ul>
+            </div>
             <div>
                 <h6>Nosotros</h6>
                 <p>Somos un grupo de amigos del conurbano sur bonaerense. Nos proponemos elaborar profesionalmente una variedad de cervezas artesanales amigables al paladar local combinada con sabores nuevos y propios, brindado un servicio de entrega para hacer llegar el producto final a los consumidores de manera cómoda y eficiente.</p>
@@ -19,7 +26,14 @@
         </div>
 
         <div class="pd-quienes-somos-left">
-            <img src="/images/img-beer-temporary.jpg" alt="beer">
+            <div class="slider qs-img-container">
+                <ul>
+                    <li><img src="/images/DSC_0005.jpg" alt="image slider" class="slider-img"></li>
+                    <li><img src="/images/DSC_0007.jpg" alt="image slider" class="slider-img"></li>
+                    <li><img src="/images/DSC_0014.jpg" alt="image slider" class="slider-img"></li>
+                    <li><img src="/images/DSC_0030.jpg" alt="image slider" class="slider-img"></li>
+                </ul>
+            </div>
             <div>
                 <h6>La cervecería</h6>
                 <p>CHEC es una cervecería artesanal gestada por un grupo de amigos en Gerli, Provincia de Buenos Aires.
