--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1192,30 +1192,37 @@ section .pd-quienes-somos-right, section .pd-quienes-somos-left {
   flex: 40%;
   justify-content: center;
   flex-direction: column;
+  border: 1px solid #c4c4c4;
+  border-radius: 4px;
+  background-color: #ebebeb;
+  margin: 10px;
+}
+
+.qs-img-container {
+  padding: 10px 0 20px 0;
+  margin: auto;
 }
 .pd-quienes-somos-right img, .pd-quienes-somos-left img {
-  padding: 10px;
-  max-width: 320px;
+  max-width: 400px;
   margin: auto;
 }
 .pd-quienes-somos-right div, .pd-quienes-somos-left div {
   align-items: flex-start;
   flex: 40%;
-  margin: 10px;
   font-family: "Montagu Slab", serif;
-  width: 100%;
+  width: 95%;
 }
-
 
 .pd-quienes-somos-right div h6, .pd-quienes-somos-left div h6 {
   font-size: 1em;
-  padding: 10px;
+  padding: 20px 0 10px 0;
+  margin: auto;
 }
 
 .pd-quienes-somos-right div p, .pd-quienes-somos-left div p {
   max-width: 500px;
   padding: 10px 20px;
-  margin: 10px;
+  margin: auto;
   text-align: justify;
 }
 /* Fin Quienes somos*/
