--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,17 @@
 <body class="ind-body">
     <!-- Header-->
     <%- include("./partials/header") %>
-    <section class="ind-top">
+    <section class="ind-top-test">
+    
+    <div class="right-content-test">
+        <article class="art-3">
+        <img src="/images/guarda.png" >
+        <p>Cuando abrimos una cerveza <i>CHEC</i>, hecha con Calidad y para todos los gustos, es seguramente porque  estamos disfrutando un momento de placer, solos o acompañados de familia, amigos y anécdotas para compartir. Compartiendo una picada, un asado o una buena comida. Mientras disfrutamos, se pierde noción del tiempo y la sobremesa se hace más extensa.</p>
+        <h3> Un aplauso para el anfitrión, y <i>CHEC </i>  te asegura un próximo encuentro... <i class="fas fa-beer"> </i>  </h3>
+        </article>
+    </div>
+    </section>
+    <!-- <section class="ind-top">
         <div class="slider">
             <ul>
                 <li><img src="/images/presentacion5.png" alt="image slider" class="slider-img"></li>
@@ -15,9 +25,9 @@
                 <li><img src="/images/presentacion4.png" alt="image slider" class="slider-img"></li>
                 <li><img src="/images/presentacion3.png" alt="image slider" class="slider-img"></li>
             </ul>
-        </div>
-    </section>
-    <section class="ind-middle">
+        </div>  
+    </section> -->
+    <!-- <section class="ind-middle">
      <div class="left-content">
         <div class="best">
         <div class="art-1">
@@ -38,7 +48,7 @@
             </article>
         
     </div>
-</section>
+</section> -->
     <section class="bottom-content">
      <%- include('./partials/articles')%>
     </section>
