--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -738,12 +738,15 @@ color: #ff6200;
 .pa-div-add-btn{
   /*position: relative;
   float: right;*/
+  right: 100px;
+  align: right
 }
 
 .pa-add-btn{
   /*position: fixed;
   width:100%;
   max-width:1200px;*/
+  align: right
 
 }
 
