--- a/views/product/productPage.ejs
+++ b/views/product/productPage.ejs
@@ -13,7 +13,7 @@
         
         <h2 class="pd-titulo">Tienda</h2>
         <% if (datos.userLogged && datos.userLogged.userRole == "Admin"){ %> 
-            <div class="add-receta-container">
+            <div class="pa-div-add-btn">
                 <!-- <div class="pa-div-add-btn">-->
                     <button class="pd-admin ">
                         <a href="/product/productAdmin/0" class="pd-admin-a">Agregar</a>
