--- a/views/product/productPage.ejs
+++ b/views/product/productPage.ejs
@@ -12,7 +12,7 @@
     <main class="pd-main">
         
         <h2 class="pd-titulo">Tienda</h2>
-               <% if (datos.userLogged && datos.userLogged.userRole == "Admin"){ %> 
+               <% if (datos.userLogged && datos.userLogged.userroles_id == 2){ %> 
             <div class="add-receta-container">
                 <!-- <div class="pa-div-add-btn">-->
                      <button class="pd-admin ">
