--- a/views/product/productPage.ejs
+++ b/views/product/productPage.ejs
@@ -12,11 +12,11 @@
     <main class="pd-main">
         
         <h2 class="pd-titulo">Tienda</h2>
-               <% if (datos.userLogged && datos.userLogged.userRole == "Admin"){ %> 
+               <% if (datos.userLogged && datos.userLogged.userroles_id == "2"){ %> 
             <div class="add-receta-container">
                 <!-- <div class="pa-div-add-btn">-->
                      <button class="pd-admin ">
-                        <a href="/product/productAdmin/0" class="pd-admin-a">Agregar</a>
+                        <a href="/product/productCreate" class="pd-admin-a">Agregar</a>
                     </button>
                 <!-- </div>-->
             </div>        
