--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -3,7 +3,7 @@
 <%- include('../partials/head') %>
 <body >
 	<%- include("../partials/header") %>
-	<form action="/users/profile" class="" method="POST" enctype="multipart/form-data">
+	<form action="/users/profile/<%= user.id %> " class="" method="POST" enctype="multipart/form-data">
 	<!-- Container -->
 	<div class="container" style="margin-top: 40px;">
 		<div class="pr-form lg-form rg-input" style="padding:15px 0">
@@ -15,8 +15,8 @@
 				<div class="alert alert-success"><%= user.email %> </div>
 				<div>
 					
-					<button type="submit" class="pd-add ">
-						<a href="/users/profile/edit/<%=user.id%>" > Modificar perfil</a>
+					<button type="submit" class="pd-add " value="Modificar perfil">
+						<a href="/users/profile/<%=user.id%>" > Modificar perfil</a>
 					</button>
 	</form>
 				</div>
