fix: campo name en EJS edit Profile

--- a/views/users/editProfile.ejs
+++ b/views/users/editProfile.ejs
@@ -15,8 +15,9 @@
             <input 
             type="text" 
             name="name"
-            class="'rg-input' <%= locals.errors && errors.name ? 'is-invalid' : null %>"
+            class="rg-input <%= locals.errors && errors.name ? 'is-invalid' : null %>"
             value="<%=userToEdit.name%>">
+
             <% if (locals.errors && errors.name) { %>
                 <div class="text-danger">
                     <%= errors.name.msg %> 
@@ -29,7 +30,7 @@
                 <input 
                     type="text"
                     name="lastName" 
-                    class="rg-input"<%= locals.errors && errors.lastName ? 'is-invalid' : null %>"
+                    class="rg-input <%= locals.errors && errors.lastName ? 'is-invalid' : null %>"
                     value="<%= userToEdit.lastName  %>">
                     <% if (locals.errors && errors.lastName) { %>
                         <div class="text-danger">
